--- a/ConsoleApp_7th/ConsoleApp_7th/ConsoleApp_7th.csproj
+++ b/ConsoleApp_7th/ConsoleApp_7th/ConsoleApp_7th.csproj
@@ -42,8 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleListControl.cs" />
+    <Compile Include="Contact.cs" />
+    <Compile Include="IListable.cs" />
+    <Compile Include="PdaItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publication.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
